Push ho jaa plijj

--- a/src/assets/Footer.css
+++ b/src/assets/Footer.css
@@ -1,7 +1,7 @@
 footer {
-    position: fixed;
+    position: relative;
     height: 150px;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
 }
 
