--- a/src/assets/Projects.css
+++ b/src/assets/Projects.css
@@ -23,9 +23,14 @@ a{
     float: right;
     position: relative;
     right: 100px;
-    bottom: 50px;
+    bottom: 30px;
 }
 
 li{
     margin-top: 20px;
+}
+
+.designLink{
+    left: 150px;
+    position: relative;
 }
